force-app/main/default/objects/LogCallExtend__c/LogCallExtend__c.object-meta.xml
<CustomObject>
    <label>Log Call Extend</label>
    <nameField>
        <displayFormat>CallExtend-{00000}</displayFormat>
        <label>LogCallExtend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Call Extend</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>