force-app/main/default/objects/LogCallExtend__c/fields/Account_Names__c.field-meta.xml
<CustomField>
    <fullName>Account_Names__c</fullName>
    <formula>LogACall__r.Account_Names__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounts</label>
    <type>Text</type>
</CustomField>