force-app/main/default/objects/LogCallExtend__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <formula>LogACall__r.Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comments or Notes From Event</label>
    <type>Text</type>
</CustomField>