force-app/main/default/objects/LogCallExtend__c/fields/Contact_Names__c.field-meta.xml
<CustomField>
    <fullName>Contact_Names__c</fullName>
    <formula>LogACall__r.Contact_Names__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacts</label>
    <type>Text</type>
</CustomField>