force-app/main/default/objects/LogCallExtend__c/fields/Expense_Total__c.field-meta.xml
<CustomField>
    <fullName>Expense_Total__c</fullName>
    <description>Total of Expense Amount ($)</description>
    <formula>LogACall__r.Expense_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>