force-app/main/default/objects/LogCallExtend__c/fields/LogACall__c.field-meta.xml
<CustomField>
    <fullName>LogACall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log A Call</label>
    <referenceTo>LogACall__c</referenceTo>
    <relationshipLabel>LogCallExtends</relationshipLabel>
    <relationshipName>LogCallExtends</relationshipName>
    <type>Lookup</type>
</CustomField>