force-app/main/default/objects/LogCallExtend__c/fields/Type_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Call__c</fullName>
    <formula>TEXT(LogACall__r.Type_of_Call__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Call</label>
    <type>Text</type>
</CustomField>